--- a/code-snippets/Day3/flexbox/index.html
+++ b/code-snippets/Day3/flexbox/index.html
@@ -29,10 +29,36 @@
     </div>
 
     <div class="justify-content4">
-        <div class="box">9</div>
-        <div class="box">10</div>
-        <div class="box">11</div>
-        <div class="box">12</div>
+        <div class="box">13</div>
+        <div class="box">14</div>
+        <div class="box">15</div>
+        <div class="box">16</div>
     </div>
+
+    <div class="center-div">
+        <div class="box">A</div>
+    </div>
+
+    <div class="flex-direction">
+        <div class="box">A1</div>
+        <div class="box">A2</div>
+        <div class="box">A3</div>
+        <div class="box">A4</div>
+    </div>
+
+    <div class="flex-direction2">
+        <div class="box">B1</div>
+        <div class="box">B2</div>
+        <div class="box">B3</div>
+        <div class="box">B4</div>
+    </div>
+
+    <div class="order">
+        <div class="box c1">C1</div>
+        <div class="box c2">C2</div>
+        <div class="box c3">C3</div>
+        <div class="box c4">C4</div>
+    </div>
+
 </body>
 </html>
