--- a/code-snippets/Day4/index.html
+++ b/code-snippets/Day4/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Gonna take a rest today chat, im so tired</h1>
+        <h1>Chat im so cooked</h1>
     </div>
 </body>
 </html>
